quick fixes for test cases